--- a/style.css
+++ b/style.css
@@ -2,11 +2,20 @@ body {
   margin: 0px;
   width: 100%;
   height: 100vh;
-  background-color: cyan;
+
+  background-color: hsl(230, 100%, 99%);
+  background-image: url("./images/bg-pattern.svg");
+  background-repeat: no-repeat;
+  background-size: auto;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-family: "Manrope", sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  color: hsl(225, 20%, 60%);
 }
 
 p {
@@ -14,7 +23,7 @@ p {
 }
 
 .main-container {
-  margin: 0px 45px;
+  margin: 0px 6%;
   max-width: 540px;
   width: 100%;
 
@@ -25,18 +34,28 @@ p {
 }
 
 .main__text-container {
-  background-color: darkcyan;
+  height: 150px;
+
   background-image: url("./images/pattern-circles.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+}
+
+.text__heading {
+  font-size: 2em;
+  font-weight: 800;
+  color: hsl(227, 35%, 25%);
 }
 
 .main__card-container {
   padding: 30px 40px;
-  background-color: white;
+  background-color: hsl(0, 0%, 100%);
 
   display: grid;
   column-gap: 10%;
@@ -45,6 +64,27 @@ p {
   grid-template-rows: repeat(5, auto);
   align-items: center;
   justify-items: center;
+
+  border-radius: 10px;
+}
+
+.card__pageviews {
+  justify-self: start;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.card__cost {
+  justify-self: end;
+
+  display: flex;
+  align-items: center;
+}
+
+.cost__amount {
+  font-size: 2em;
+  font-weight: 800;
+  color: hsl(227, 35%, 25%);
 }
 
 .card__slider-container {
@@ -57,7 +97,13 @@ p {
   appearance: none;
   width: 100%;
   height: 10px;
-  background-color: cyan;
+  background-image: linear-gradient(
+    90deg,
+    hsl(174, 77%, 80%) 0%,
+    hsl(174, 77%, 80%) 50%,
+    hsl(224, 65%, 95%) 50%,
+    hsl(224, 65%, 95%) 100%
+  );
 
   border-radius: 50px;
   opacity: 0.75;
@@ -68,11 +114,22 @@ p {
   width: 40px;
   height: 40px;
   background: url("./images/icon-slider.svg");
-  background-color: darkcyan;
+  background-color: hsl(174, 86%, 45%);
   background-repeat: no-repeat;
   background-position: center;
+
+  box-shadow: 0px 0px 15px 5px hsl(174, 86%, 45%);
   border-radius: 50%;
   cursor: pointer;
+}
+
+.card__slider::-webkit-slider-thumb:hover {
+  cursor: grab;
+}
+
+.card__slider::-webkit-slider-thumb:active {
+  background-color: hsl(174, 86%, 40%);
+  cursor: grabbing;
 }
 
 .card__plan-container {
@@ -85,7 +142,7 @@ p {
   align-items: center;
 }
 
-.plan__slider-container {
+.plan__switch-container {
   position: relative;
   display: inline-block;
   width: 40px;
@@ -98,32 +155,31 @@ p {
   height: 0;
 }
 
-.plan__check:checked + .plan__slider::before {
+.plan__check:checked + .plan__switch::before {
   transform: translateX(15px);
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
 }
 
-.plan__check:checked + .plan__slider {
-  background-color: cyan;
+.plan__check:hover + .plan__switch {
+  background-color: hsl(174, 77%, 80%);
 }
 
-.plan__slider {
+.plan__switch {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: hsl(223, 50%, 87%);
 
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 
   border-radius: 20px;
   cursor: pointer;
 }
 
-.plan__slider::before {
+.plan__switch::before {
   content: "";
   position: absolute;
   width: 15px;
@@ -140,12 +196,14 @@ p {
 
 .plan__discount {
   padding: 0px 5px;
-  background-color: aquamarine;
+  background-color: hsl(14, 92%, 95%);
+  color: hsl(15, 100%, 70%);
   border-radius: 10px;
 }
 
 hr {
   grid-column: span 2;
+  border-color: hsla(225, 20%, 60%, 0.1);
 
   position: relative;
   right: 41px;
@@ -155,6 +213,7 @@ hr {
 .main__features-container {
   width: 100%;
   display: grid;
+  column-gap: 2.5%;
   grid-template-columns: auto auto;
   align-items: center;
   justify-items: center;
@@ -168,4 +227,66 @@ hr {
   max-width: 170px;
   width: 100%;
   aspect-ratio: 1 / 0.24;
+  background-color: hsl(227, 35%, 25%);
+
+  font-size: 1em;
+  font-weight: 800;
+  color: hsl(226, 100%, 87%);
+
+  border-style: none;
+  border-radius: 20px;
+}
+
+.main__button:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 550px) {
+  body {
+    height: auto;
+    padding: 50px 0px;
+  }
+
+  .main__card-container {
+    grid-template-rows: repeat(7, auto);
+  }
+
+  .card__pageviews {
+    grid-column: span 2;
+    justify-self: center;
+  }
+
+  .card__cost {
+    grid-row: 3 / 4;
+    grid-column: span 2;
+    justify-self: center;
+  }
+
+  .main__features-container {
+    grid-column: span 2;
+    justify-items: end;
+  }
+
+  .main__button {
+    grid-column: span 2;
+    max-width: 250px;
+    border-radius: 30px;
+  }
+}
+
+@media (max-width: 450px) {
+  .main__card-container {
+    padding: 30px 10px;
+  }
+
+  hr {
+    right: 11px;
+    width: calc(100% + 18px);
+  }
+}
+
+@media (max-width: 380px) {
+  body {
+    font-size: 12px;
+  }
 }
